tests/ui/associated-type-bounds/cant-see-copy-bound-from-child-rigid-2.stderr
error: hi
  --> $DIR/cant-see-copy-bound-from-child-rigid-2.rs:4:1
   |
LL | trait Id {
   | -------- built-in `dyn Id<This = _>` implementation for this trait
...
LL | impl<T: ?Sized> Id for T {
   | ^^^^^^^^^^^^^^^^^^^^^^^^ overlaps with this blanket impl
   |
   = note: `#[forbid(dyn_overlap)]` on by default

error[E0382]: use of moved value: `x`
  --> $DIR/cant-see-copy-bound-from-child-rigid-2.rs:14:9
   |
LL | fn foo<T: Trait>(x: T::Assoc) -> (T::Assoc, T::Assoc) {
   |                  - move occurs because `x` has type `<T as Trait>::Assoc`, which does not implement the `Copy` trait
LL |     (x, x)
   |      -  ^ value used here after move
   |      |
   |      value moved here

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0382`.
